INTYGFV-16158: Refactored how unit list is retrieved